manifests/applications/b4mad-matrix/syncv3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncv3
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
